Fixes nav width on mobile view

--- a/src/styles/_navStyles.scss
+++ b/src/styles/_navStyles.scss
@@ -6,6 +6,7 @@
   right: 0;
   height: 120px;
   z-index: -1;
+  transition: 0.3s;
 
   @include for-tablet-portrait-down {
     width: 100%;
@@ -17,7 +18,7 @@
   @include for-phone-only {
     position: fixed;
     top: 0;
-    max-width: 375px;
+    // max-width: 375px;
     right: auto;
     left: 0;
     height: 70px;
